[project]
name = "logging-conf"
version = "0.0.0"
description = "Add your description here"
license = "BSD-2-Clause"
readme = "README.md"
authors = [
    { name = "fleetingbytes", email = "7075397+fleetingbytes@users.noreply.github.com" }
]
requires-python = ">=3.11"
keywords = ["logging", "logging configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Unix Shell",
]
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "http://github.com/fleetingbytes/logging-conf"
Documentation = "http://github.com/fleetingbytes/logging-conf/blob/master/README.md"
Repository = "http://github.com/fleetingbytes/logging-conf.git"
Issues = "http://github.com/fleetingbytes/logging-conf/issues"
Changelog = "http://github.com/fleetingbytes/logging-conf/blob/master/CHANGELOG.md"

