[project]
name = "readylog"
version = "0.6.1"
description = "Creates a reasonable logging configuration for a Python project"
license = "BSD-2-Clause"
readme = "README.md"
authors = [
    { name = "fleetingbytes", email = "7075397+fleetingbytes@users.noreply.github.com" }
]
requires-python = ">=3.11"
keywords = ["logging", "logging configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = []

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.15.4",
]
test = [
    "pytest>=9",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "http://github.com/fleetingbytes/readylog"
Documentation = "http://github.com/fleetingbytes/readylog/blob/master/README.md"
Repository = "http://github.com/fleetingbytes/readylog.git"
Issues = "http://github.com/fleetingbytes/readylog/issues"
Changelog = "http://github.com/fleetingbytes/readylog/blob/master/CHANGELOG.md"

